--- a/src/main/resources/Views/QuizStyle.css
+++ b/src/main/resources/Views/QuizStyle.css
@@ -2,7 +2,9 @@
     src: url("../fonts/PlayfairDisplay-Bold.ttf"),
     url("../fonts/OpenSans-Light.ttf"),
     url("../fonts/NotoSans-Bold.ttf"),
-    url("../fonts/NotoSans-Regular.ttf");
+    url("../fonts/NotoSans-Regular.ttf"),
+    url("../fonts/Poppins-Bold.ttf"),
+    url("../fonts/Poppins-Regular.ttf");
 }
 
 .radiobutton {
@@ -11,57 +13,77 @@
     -fx-border-width: 2px;
     -fx-background-color: #ffffff;
     -fx-text-fill: #000000;
-    -fx-font-family: "Noto Sans Regular";
+    -fx-font-family: "Poppins Regular";
     -fx-font-size: 20;
     -fx-padding: 10px;
 }
 
 .question {
-    -fx-font-family: "Noto Sans Bold";
+    -fx-font-family: "Poppins Bold";
+    -fx-font-weight: bold;
     -fx-text-fill: #000000;
     -fx-font-size: 22;
 }
 
 .next-button {
-    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
     -fx-border-color: rgba(82, 123, 142, 0.40);
     -fx-border-width: 2px;
     -fx-background-color: #527b8e;
     -fx-text-fill: #ffffff;
-    -fx-font-family: "Noto Sans Regular";
+    -fx-font-family: "Poppins Regular";
     -fx-font-size: 20;
     -fx-padding: 10px;
 }
 
 .quiz-comment {
     -fx-border-radius: 10px;
-    -fx-font-family: "Noto Sans Regular";
+    -fx-font-family: "Poppins Regular";
     -fx-font-size: 20;
 }
 
 .score {
     -fx-font-size: 28;
-    -fx-font-family: "Noto Sans Regular";
+    -fx-font-family: "Poppins Regular";
     -fx-text-fill: #ffffff;
 }
 
 .question-no {
     -fx-font-size: 12;
-    -fx-font-family: "Noto Sans Regular";
+    -fx-font-family: "Poppins Regular";
     -fx-text-fill: #b5b5b5;
 }
 
 .final-score {
     -fx-font-size: 60;
-    -fx-font-family: "Noto Sans Bold";
+    -fx-font-family: "Poppins Bold";
     -fx-text-fill: #ffffff;
 }
 
 .try-again {
-    -fx-border-radius: 20px;
+    -fx-background-radius: 20px;
     -fx-background-color: #527B8E;
-    -fx-font-family: "Noto Sans Bold";
+    -fx-font-family: "Poppins Bold";
+    -fx-font-weight: bold;
     -fx-text-fill: #ffffff;
     -fx-font-size: 16;
     -fx-text-alignment: center;
+}
+
+.correct-style {
+    -fx-background-radius: 10px;
+    -fx-background-color: #D6FEB8;
+    -fx-font-family: "Poppins Regular";
+    -fx-min-width: 688px;
+    -fx-text-fill: #6BB52C;
+    -fx-font-size: 20px;
+}
+
+.incorrect-style {
+    -fx-background-radius: 10px;
+    -fx-background-color: #FEDEDF;
+    -fx-font-family: "Poppins Regular";
+    -fx-min-width: 688px;
+    -fx-text-fill: #EF6163;
+    -fx-font-size: 20px;
 }
