--- a/src/main/resources/Views/WordleUI.fxml
+++ b/src/main/resources/Views/WordleUI.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -30,4 +32,17 @@
             </padding>
         </GridPane>
     </VBox>
+   <ImageView fx:id="restartIcon" fitHeight="40.0" fitWidth="40.0" layoutX="805.0" layoutY="86.0" onMouseClicked="#handleRestart" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../images/Restart.png" />
+      </image>
+   </ImageView>
+   <ImageView fx:id="ResultBack" fitHeight="400.0" fitWidth="600.0" layoutX="150.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../images/Wordle_Result-08.png" />
+      </image>
+   </ImageView>
+   <Label fx:id="GameStatus" layoutX="150.0" layoutY="182.0" prefWidth="600.0" styleClass="game-status" text="YOU WIN!" />
+   <Label fx:id="WinningWord" layoutX="150.0" layoutY="362.0" prefWidth="600.0" styleClass="winning-word" text="RAISE" />
+    <Button fx:id="TryAgain" layoutX="170.0" layoutY="478.0" mnemonicParsing="false" onMouseClicked="#handleTryAgain" prefHeight="44.0" prefWidth="560.0" style="-fx-border-radius: 20;" styleClass="try-again" text="Try Again" />
 </AnchorPane>
