--- a/src/main/resources/Views/wordle.css
+++ b/src/main/resources/Views/wordle.css
@@ -6,22 +6,10 @@
     url("../fonts/NotoSans-Regular.ttf");
 }
 
-.root {
-    -white-color: white;
-    -wrong-color: #ef7886;
-    -text-fill-color: black;
-    -empty-border-color: #d3d6da;
-    -unlocked-border-color: #878a8c;
-    -background-color: white;
-    -key-background-color: #d3d6da;
-    -present-color: #e9c46a;
-    -correct-color: #2a9d8f;
-}
-
 .default-tile {
-    -fx-background-color: -background-color;
-    -fx-border-color: -empty-border-color;
-    -fx-text-fill: -text-fill-color;
+    -fx-background-color: white;
+    -fx-border-color: #d3d6da;
+    -fx-text-fill: black;
     -fx-font-family: "Poppins Bold";
     -fx-font-size: 24px;
     -fx-font-weight: bold;
@@ -37,7 +25,7 @@
 }
 
 .tile-with-letter {
-    -fx-border-color: -unlocked-border-color;
+    -fx-border-color: #878a8c;
 }
 
 .present-letter {
@@ -95,13 +83,13 @@
 }
 
 .main-screen {
-    -fx-background-color: -background-color;
+    -fx-background-color: white;
     -fx-padding: 10px;
 }
 
 .keyboard-tile {
-    -fx-background-color: -key-background-color;
-    -fx-text-fill: -text-fill-color;
+    -fx-background-color: #d3d6da;
+    -fx-text-fill: black;
     -fx-font-size: 16px;
     -fx-font-family: "Poppins Bold";
     -fx-font-weight: bold;
@@ -113,8 +101,8 @@
 }
 
 .keyboardCorrectColor {
-    -fx-background-color: -key-background-color;
-    -fx-text-fill: -correct-color;
+    -fx-background-color: #d3d6da;
+    -fx-text-fill: #2a9d8f;
     -fx-font-size: 16px;
     -fx-font-family: "Poppins Bold";
     -fx-font-weight: bold;
@@ -126,8 +114,8 @@
 }
 
 .keyboardPresentColor {
-    -fx-background-color: -key-background-color;
-    -fx-text-fill: -present-color;
+    -fx-background-color: #d3d6da;
+    -fx-text-fill: #e9c46a;
     -fx-font-size: 16px;
     -fx-font-family: "Poppins Bold";
     -fx-font-weight: bold;
@@ -139,8 +127,8 @@
 }
 
 .keyboardWrongColor {
-    -fx-background-color: -key-background-color;
-    -fx-text-fill: -wrong-color;
+    -fx-background-color: #d3d6da;
+    -fx-text-fill: #ef7886;
     -fx-font-size: 16px;
     -fx-font-family: "Poppins Bold";
     -fx-font-weight: bold;
@@ -152,8 +140,8 @@
 }
 
 .keyboard-tile-non-alphanumeric {
-    -fx-background-color: -key-background-color;
-    -fx-text-fill: -text-fill-color;
+    -fx-background-color: #d3d6da;
+    -fx-text-fill: black;
     -fx-font-size: 16px;
     -fx-font-family: "Poppins Bold";
     -fx-font-weight: bold;
@@ -174,8 +162,8 @@
 }
 
 .correct-letter-example {
-    -fx-background-color: -correct-color;
-    -fx-border-color: -correct-color;
+    -fx-background-color: #2a9d8f;
+    -fx-border-color: #2a9d8f;
     -fx-text-fill: white;
     -fx-font-size: 27px;
     -fx-font-weight: bold;
@@ -189,9 +177,9 @@
 }
 
 .default-letter-example {
-    -fx-background-color: -background-color;
-    -fx-border-color: -empty-border-color;
-    -fx-text-fill: -text-fill-color;
+    -fx-background-color: white;
+    -fx-border-color: #d3d6da;
+    -fx-text-fill: black;
     -fx-font-size: 27px;
     -fx-font-weight: bold;
     -fx-border-width: 1px;
@@ -204,8 +192,8 @@
 }
 
 .present-letter-example {
-    -fx-background-color: -present-color;
-    -fx-border-color: -present-color;
+    -fx-background-color: #e9c46a;
+    -fx-border-color: #e9c46a;
     -fx-text-fill: white;
     -fx-font-size: 27px;
     -fx-font-weight: bold;
@@ -219,8 +207,8 @@
 }
 
 .wrong-letter-example {
-    -fx-background-color: -wrong-color;
-    -fx-border-color: -wrong-color;
+    -fx-background-color: #ef7886;
+    -fx-border-color: #ef7886;
     -fx-text-fill: white;
     -fx-font-size: 27px;
     -fx-font-weight: bold;
@@ -259,5 +247,18 @@
     -fx-text-fill: #ffffff;
     -fx-font-size: 16px;
     -fx-font-weight: bold;
+    -fx-text-alignment: center;
+}
+
+.menu-button {
+    -fx-background-color: #527b8e;
+    -fx-background-radius: 15px;
+    -fx-text-fill: white;
+    -fx-font-family: "Poppins Regular";
+    -fx-font-size: 22px;
+    -fx-min-width: 305px;
+    -fx-min-height: 54px;
+    -fx-pref-width: 305px;
+    -fx-pref-height: 54px;
     -fx-text-alignment: center;
 }
