--- a/src/main/resources/Views/sidePanel.fxml
+++ b/src/main/resources/Views/sidePanel.fxml
@@ -44,6 +44,9 @@
                      <image>
                         <Image url="@../images/Game2Menu.png" />
                      </image>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </ImageView>
                   <ImageView fx:id="closeMenu" fitHeight="41.0" fitWidth="23.0" layoutX="169.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                      <image>
