--- a/src/main/resources/Views/MyWords.fxml
+++ b/src/main/resources/Views/MyWords.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dictionary.DictionaryController.MyWordsController">
    <children>
@@ -12,6 +14,11 @@
             <Image url="@../images/MyWords.png" />
          </image>
       </ImageView>
-      <ListView fx:id="wordlist" fixedCellSize="0.0" layoutX="468.0" layoutY="332.0" prefHeight="200.0" prefWidth="402.0" stylesheets="@test.css" />
+      <ListView fx:id="wordlist" fixedCellSize="0.0" layoutX="450.0" layoutY="341.0" prefHeight="200.0" prefWidth="402.0" stylesheets="@test.css" />
+      <Text layoutX="380.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="My Words">
+         <font>
+            <Font name="Playfair Display Bold" size="33.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
