--- a/src/main/resources/Views/test.css
+++ b/src/main/resources/Views/test.css
@@ -144,7 +144,31 @@
     -fx-font-size: 18;
     -fx-font-weight: 100;
 }
-.list-view:focused .content {
-    -fx-background-color: transparent, white, transparent, white;
+.list-cell {
+    -fx-font-family: "Playfair Display";
+    -fx-font-size: 20px;
+    -fx-text-fill: #527B8E;
+    -fx-cell-size: 55px;
 }
+
+.list-view .scroll-bar:vertical .track {
+    -fx-background-color: #f0f0f0;
+    -fx-border-color: transparent;
+}
+
+/* Thumb */
+.list-view .scroll-bar:vertical .thumb {
+    -fx-background-color: #888;
+    -fx-background-radius: 10;
+    -fx-border-radius: 10;
+}
+
+/* Buttons (up and down arrows) */
+.list-view .scroll-bar:vertical .increment-button,
+.list-view .scroll-bar:vertical .decrement-button {
+    -fx-padding: 3;
+    -fx-background-color: transparent;
+}
+
+
 
