--- a/src/main/resources/Views/MyWords.fxml
+++ b/src/main/resources/Views/MyWords.fxml
@@ -21,6 +21,6 @@
             <Font name="Playfair Display Bold" size="33.0" />
          </font>
       </Text>
-      <TextField fx:id="searchbar" layoutX="66.0" layoutY="287.0" onKeyTyped="#searchMyWord" prefHeight="30.0" prefWidth="187.0" />
+      <TextField fx:id="searchbar" layoutX="66.0" layoutY="287.0" prefHeight="30.0" prefWidth="187.0" />
    </children>
 </AnchorPane>
