--- a/src/main/resources/Views/test.css
+++ b/src/main/resources/Views/test.css
@@ -151,24 +151,33 @@
     -fx-cell-size: 55px;
 }
 
-.list-view .scroll-bar:vertical .track {
-    -fx-background-color: #f0f0f0;
+.list-word .scroll-bar:vertical {
+    -fx-pref-width: 20px;
+}
+
+.hyperlink {
     -fx-border-color: transparent;
 }
 
-/* Thumb */
-.list-view .scroll-bar:vertical .thumb {
-    -fx-background-color: #888;
-    -fx-background-radius: 10;
-    -fx-border-radius: 10;
+.list-word {
+    -fx-background-color: -fx-control-inner-background;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+}
+.list-word .list-cell:odd {
+    -fx-background-color: #F3F3F3;
 }
 
-/* Buttons (up and down arrows) */
-.list-view .scroll-bar:vertical .increment-button,
-.list-view .scroll-bar:vertical .decrement-button {
-    -fx-padding: 3;
-    -fx-background-color: transparent;
+.list-word .list-cell:even {
+    -fx-background-color: white;
 }
 
+.list-word .list-cell:filled:selected:focused:odd,
+.list-word .list-cell:filled:selected:odd {
+    -fx-background-color: #F3F3F3;
+}
 
-
+.list-word .list-cell:filled:selected:focused:even,
+.list-word .list-cell:filled:selected:even {
+    -fx-background-color: white;
+}
