--- a/src/main/resources/Views/WordleUI.fxml
+++ b/src/main/resources/Views/WordleUI.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,6 +18,11 @@
    </ImageView>
     <GridPane fx:id="gridPane" alignment="TOP_CENTER" focusTraversable="true" hgap="7.0" layoutY="90.0" onKeyPressed="#onKeyPressed" prefHeight="400.0" prefWidth="900.0" vgap="5.0">
     </GridPane>
+   <Label fx:id="Invalid" layoutX="350.0" layoutY="221.0" styleClass="invalid-warning" text="Not in wordlist">
+      <effect>
+         <DropShadow />
+      </effect>
+   </Label>
     <VBox layoutX="2.0" layoutY="425.0" prefHeight="16.0" prefWidth="900.0">
         <GridPane fx:id="keyboardRow1" alignment="BOTTOM_CENTER" hgap="4" vgap="2">
             <padding>
