--- a/src/main/resources/Views/wordle.css
+++ b/src/main/resources/Views/wordle.css
@@ -291,3 +291,25 @@
     -fx-pref-height: 50px;
     -fx-text-alignment: center;
 }
+
+.statistic-value {
+    -fx-text-fill: #1A475B;
+    -fx-font-family: "Poppins Regular";
+    -fx-font-weight: normal;
+    -fx-font-size: 48px;
+}
+
+.statistic-title {
+    -fx-text-fill: #000000;
+    -fx-font-family: "Poppins Regular";
+    -fx-font-weight: normal ;
+    -fx-font-size: 12px;
+}
+
+.statistic-guess-distribution {
+    -fx-text-alignment: center;
+    -fx-text-fill: #000000;
+    -fx-font-family: "Poppins Bold";
+    -fx-font-weight: bold;
+    -fx-font-size: 16px;
+}
