--- a/src/main/resources/Views/addWord.fxml
+++ b/src/main/resources/Views/addWord.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -21,7 +22,6 @@
       <TextField fx:id="newSynonym" layoutX="505.0" layoutY="286.0" prefHeight="27.0" prefWidth="318.0" styleClass="meaning" stylesheets="@test.css" />
       <TextField fx:id="newDefinition" alignment="TOP_LEFT" layoutX="77.0" layoutY="369.0" prefHeight="58.0" prefWidth="750.0" styleClass="meaning" stylesheets="@test.css" />
       <TextField fx:id="newExample" alignment="TOP_LEFT" layoutX="77.0" layoutY="467.0" prefHeight="58.0" prefWidth="750.0" styleClass="meaning" stylesheets="@test.css" />
-      <Button fx:id="addButton" contentDisplay="CENTER" layoutX="415.0" layoutY="547.0" mnemonicParsing="false" onMouseClicked="#addWord" prefHeight="26.0" prefWidth="110.0" styleClass="addButton" stylesheets="@test.css" text="Add" textAlignment="CENTER" />
       <Text fill="WHITE" layoutX="80.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Word" textAlignment="CENTER" wrappingWidth="48.509952545166016">
          <font>
             <Font name="Poppins Regular" size="14.0" />
@@ -62,5 +62,13 @@
             <Font name="Poppins Regular" size="14.0" />
          </font>
       </Text>
+      <Button fx:id="addButton" layoutX="381.0" layoutY="550.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="142.0" style="-fx-background-radius: 15; -fx-background-color: #1a475b;" text="Add" textFill="WHITE">
+         <font>
+            <Font name="Poppins Bold" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
