--- a/src/main/resources/Views/addWord.fxml
+++ b/src/main/resources/Views/addWord.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -62,13 +62,13 @@
             <Font name="Poppins Regular" size="14.0" />
          </font>
       </Text>
-      <Button fx:id="addButton" layoutX="381.0" layoutY="550.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="142.0" style="-fx-background-radius: 15; -fx-background-color: #1a475b;" text="Add" textFill="WHITE">
+      <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="389.0" layoutY="544.0" prefHeight="35.0" prefWidth="142.0" style="-fx-background-color: #1a475b; -fx-border-radius: 20; -fx-background-radius: 20;" text="Add" textFill="WHITE">
          <font>
-            <Font name="Poppins Bold" size="12.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
-      </Button>
+      </JFXButton>
    </children>
 </AnchorPane>
