--- a/src/main/resources/Views/signup.fxml
+++ b/src/main/resources/Views/signup.fxml
@@ -1,92 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import java.net.URL?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1000.0" style="-fx-background-color: #283655;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dictionary.DictionaryController.SignUpController">
-    <children>
-        <AnchorPane layoutX="407.2" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="592.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="407.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <AnchorPane layoutX="138.0" layoutY="216.0" prefHeight="426.0" prefWidth="390.0">
-                    <children>
-                        <Label layoutY="118.0" prefHeight="21.0" prefWidth="104.0" text="Username">
-                            <font>
-                                <Font name="Arial Bold" size="18.0" />
-                            </font>
-                        </Label>
-                        <Label layoutY="176.0" prefHeight="21.0" prefWidth="104.0" text="Password">
-                            <font>
-                                <Font name="Arial Bold" size="18.0" />
-                            </font>
-                        </Label>
-                        <TextField fx:id="usernamefill" layoutX="123.0" layoutY="116.0" prefHeight="25.0" prefWidth="165.0" promptText="Enter your username" />
-                        <PasswordField fx:id="passwordfill" layoutX="123.0" layoutY="174.0" prefHeight="25.0" prefWidth="165.0" promptText="Enter your password" />
-                        <Button fx:id="signupbutton" alignment="CENTER" layoutX="135.0" layoutY="277.0" mnemonicParsing="false" onAction="#signupButtonOnAction" prefHeight="31.0" prefWidth="104.0" text="SIGN UP" wrapText="true">
-                            <font>
-                                <Font name="Arial Bold" size="16.0" />
-                            </font>
-                            <stylesheets>
-                                <URL value="@../css/background.css" />
-                                <URL value="@../css/zoom.css" />
-                            </stylesheets>
-                        </Button>
-                        <Label layoutY="2.0" prefHeight="21.0" prefWidth="104.0" text="Firstname">
-                            <font>
-                                <Font name="Arial Bold" size="18.0" />
-                            </font>
-                        </Label>
-                        <TextField fx:id="firstnamefill" layoutX="123.0" prefHeight="25.0" prefWidth="165.0" promptText="Enter your firstname" />
-                        <Label layoutY="59.0" prefHeight="21.0" prefWidth="104.0" text="Lastname ">
-                            <font>
-                                <Font name="Arial Bold" size="18.0" />
-                            </font>
-                        </Label>
-                        <TextField fx:id="lastnamefill" layoutX="123.0" layoutY="57.0" prefHeight="25.0" prefWidth="165.0" promptText="Enter your lastname" />
-                        <Label fx:id="invalidLabel" alignment="CENTER" layoutX="50.0" layoutY="238.0" prefHeight="16.0" prefWidth="290.0" textAlignment="CENTER" textFill="#283655">
-                            <font>
-                                <Font name="Arial" size="14.0" />
-                            </font>
-                        </Label>
-                        <ProgressBar fx:id="loading" layoutY="361.0" prefHeight="18.0" prefWidth="390.0" progress="0.0" style="-fx-opacity: 0;" stylesheets="@../css/background.css" />
-                    </children>
-                </AnchorPane>
-                <Label layoutX="200.0" layoutY="71.0" text="Sign up">
-                    <font>
-                        <Font size="64.0" />
-                    </font>
-                </Label>
-            </children>
-        </AnchorPane>
-        <Label layoutX="50.0" layoutY="193.0" text="New here?" textFill="WHITE">
-            <font>
-                <Font size="64.0" />
-            </font>
-        </Label>
-        <Label layoutX="70.0" layoutY="298.0" prefHeight="131.0" prefWidth="259.0" text="Sign up and discover great amount of new oppotunities!" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-            <font>
-                <Font size="20.0" />
-            </font>
-        </Label>
-      <JFXButton fx:id="returnbutton" layoutX="41.0" layoutY="30.0" onAction="#returnAction" prefHeight="43.0" prefWidth="129.0" style="-fx-background-radius: 20; -fx-cursor: HAND; -fx-border-radius: 20; -fx-border-color: white;" stylesheets="@../css/zoom.css" text=" Return" textAlignment="CENTER" textFill="WHITE">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dictionary.DictionaryController.SignUpController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fdfaf5" height="600.0" layoutX="10.0" layoutY="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="900.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a475b" height="600.0" layoutX="-21.0" layoutY="8.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-arc-height: 35; -fx-arc-width: 35;" width="475.0" />
+      <Text fill="#fdfaf5" layoutX="65.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign up">
          <font>
-            <Font size="20.0" />
+            <Font name="Playfair Display Bold" size="30.0" />
          </font>
-         <graphic>
-            <ImageView fitHeight="29.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icon/return1.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      </Text>
+      <Text layoutX="518.0" layoutY="161.0" opacity="0.9" strokeType="OUTSIDE" strokeWidth="0.0" text="The application is designed for a pleasant language learning experience, which includes both language learning and consolidation of what has been learned" wrappingWidth="327.1158752441406">
+         <font>
+            <Font name="Poppins Light" size="16.0" />
+         </font>
+      </Text>
+      <Text fill="#fdfaf5" layoutX="72.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Username" wrappingWidth="223.11599731445312">
+         <font>
+            <Font name="Poppins Regular" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="#fdfaf5" layoutX="72.0" layoutY="323.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Password" wrappingWidth="223.11599731445312">
+         <font>
+            <Font name="Poppins Light" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="200.0" layoutY="500.0" opacity="0.6" strokeType="OUTSIDE" strokeWidth="0.0" text="or" wrappingWidth="20.715957641601562">
+         <font>
+            <Font name="Poppins Light" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="#fdfaf5" layoutX="76.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already have an account?" wrappingWidth="184.71597290039062">
+         <font>
+            <Font name="Poppins Light" size="14.0" />
+         </font>
+      </Text>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="40.0" layoutX="72.0" layoutY="252.0" stroke="#ffffff5c" strokeType="INSIDE" style="-fx-arc-height: 8; -fx-arc-width: 10;" width="270.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="40.0" layoutX="72.0" layoutY="337.0" stroke="#ffffff5c" strokeType="INSIDE" style="-fx-arc-height: 8; -fx-arc-width: 10;" width="270.0" />
+      <Line endX="8.5999755859375" layoutX="180.0" layoutY="496.0" opacity="0.5" startX="-100.0" stroke="WHITE" />
+      <TextField layoutX="76.0" layoutY="256.0" prefHeight="35.0" prefWidth="206.0" style="-fx-background-color: #1A475B;" />
+      <TextField layoutX="76.0" layoutY="340.0" prefHeight="35.0" prefWidth="206.0" style="-fx-background-color: #1A475B;" />
+      <Text fill="#fdfaf5" layoutX="265.0" layoutY="546.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in" underline="true" wrappingWidth="59.11592102050781">
+         <font>
+            <Font name="Poppins Light" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="#fdfaf5" layoutX="67.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="94.01419067382801">
+         <font>
+            <Font name="Poppins Regular" size="14.0" />
+         </font>
+      </Text>
+      <Text fill="#fdfaf5" layoutX="222.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="94.01419067382801">
+         <font>
+            <Font name="Poppins Regular" size="14.0" />
+         </font>
+      </Text>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="35.0" layoutX="70.0" layoutY="169.0" stroke="#ffffff5c" strokeType="INSIDE" style="-fx-arc-height: 8; -fx-arc-width: 10;" width="120.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="35.0" layoutX="222.0" layoutY="169.0" stroke="#ffffff5c" strokeType="INSIDE" style="-fx-arc-height: 8; -fx-arc-width: 10;" width="120.0" />
+      <Line endX="8.5999755859375" layoutX="327.0" layoutY="497.0" opacity="0.5" startX="-100.0" stroke="WHITE" />
+      <ImageView fitHeight="268.0" fitWidth="382.0" layoutX="491.0" layoutY="337.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/SignUpImg.png" />
+         </image>
+      </ImageView>
+      <JFXButton buttonType="RAISED" layoutX="72.0" layoutY="415.0" prefHeight="35.0" prefWidth="270.0" style="-fx-background-color: #c24935; -fx-border-radius: 20; -fx-background-radius: 20;" text="Register" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
       </JFXButton>
-    </children>
+   </children>
 </AnchorPane>
