--- a/src/main/resources/Views/LogIn.fxml
+++ b/src/main/resources/Views/LogIn.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dictionary.DictionaryController.LogInController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fdfaf5" height="600.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="900.0" />
@@ -26,14 +25,9 @@
             <Font name="Poppins Light" size="14.0" />
          </font>
       </Text>
-      <Text layoutX="69.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="223.11599731445312">
+      <Text layoutX="69.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="223.11599731445312">
          <font>
-            <Font name="Poppins Regular" size="14.0" />
-         </font>
-      </Text>
-      <Text layoutX="69.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="223.11599731445312">
-         <font>
-            <Font name="Poppins Light" size="14.0" />
+            <Font name="Poppins SemiBold" size="14.0" />
          </font>
       </Text>
       <Text layoutX="181.0" layoutY="474.0" opacity="0.6" strokeType="OUTSIDE" strokeWidth="0.0" text="or" wrappingWidth="20.715957641601562">
@@ -41,10 +35,13 @@
             <Font name="Poppins Light" size="14.0" />
          </font>
       </Text>
-      <Text fx:id="signUpPage" layoutX="79.0" layoutY="520.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create an account" wrappingWidth="223.11599731445312">
+      <Text fx:id="signUpPage" layoutX="79.0" layoutY="520.0" onMouseClicked="#changetoSignUp" strokeType="OUTSIDE" strokeWidth="0.0" text="Create an account" wrappingWidth="223.11599731445312">
          <font>
             <Font name="Poppins Light" size="14.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Text>
       <ImageView fitHeight="546.0" fitWidth="471.0" layoutX="401.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -77,6 +74,11 @@
       <Text fx:id="LogInError" fill="#860b0b" layoutX="70.0" layoutY="372.0" opacity="0.9" strokeType="OUTSIDE" strokeWidth="0.0" text="Username/password do not match any existing accounts" visible="false" wrappingWidth="263.1159973144531">
          <font>
             <Font name="Poppins Light" size="12.0" />
+         </font>
+      </Text>
+      <Text layoutX="69.0" layoutY="299.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="223.11599731445312">
+         <font>
+            <Font name="Poppins SemiBold" size="14.0" />
          </font>
       </Text>
    </children>
